fixed image bug

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <section id="product-details">
             <h2>Laptop</h2>
             <section id="product-gallery">
-                <img id="Laptop" src="images/download.jpg" alt="Laptop">
+                <img id="Laptop" src="images/laptop1.jpeg" alt="Laptop">
                 <div id="gallery-thumbnails">
-                    <img src="images/download-1.jpg" alt="Laptop" class="thumbnail" height="25" width="25">
-                    <img src="images/images copy.jpg" alt="Laptop" class="thumbnail" height="25" width="25"> 
-                    <img src="images/images-1.jpg" alt="Laptop" class="thumbnail" height="25" width="25">
+                    <img src="images/laptop2.jpg" alt="Laptop" class="thumbnail" height="25" width="25">
+                    <img src="images/laptop3.jpeg" alt="Laptop" class="thumbnail" height="25" width="25"> 
+                    <img src="images/laptop4.jpg" alt="Laptop" class="thumbnail" height="25" width="25">
                 </div>
             </section>
             <p>Price: $499.99</p>
